--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Ecommerce project with MERN Stack",
   "main": "server.js",
   "scripts": {
-    "start" : "node server",
-    "server" : "nodemon server",
-    "client" : "npm start --prefix client",
-    "dev" : "concurrently \"npm run server\" \"npm run client\""
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [
     "Node",
@@ -19,7 +19,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.16.4",
-    "mongoose": "^5.5.4"
+    "gridfs-stream": "^1.1.1",
+    "mongoose": "^5.5.4",
+    "multer": "^1.4.1",
+    "multer-gridfs-storage": "^3.2.3"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
