--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^5.5.4",
+    "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3"
   },
